[package]
name = "nadi"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["highlighter", "markdown", "lazy", "tokio", "svg", "canvas"] }
nadi_core = { version = "0.6.0", features = ["functions"] }

tokio = {version = "1.44.1", features = ["fs"]}
rfd = "0.13"
gag = "1.0.0"
iced_core = "0.13.2"
iced_graphics = { version = "0.13.0", features = ["geometry"] }
webbrowser = "1.0.4"
